@@ -419,6 +419,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       value.) Change all locations referencing generateKey () to use the
       return value (if necessary) and remove dead code that was used to
       generate a user key manually previously.
+    - src/onmainwindow.cpp: add more error handling to generateKey () and fix
+      up a broken error-handling section.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
